--- a/index.html
+++ b/index.html
@@ -29,6 +29,6 @@
         </div>
       </div>
     </div>
-    <script src=".//assests/script.java"></script>
+    <script src="./assests/script.java"></script>
   </body>
 </html>
